# phala-pruntime

./: .gitignore  .gitmodules  Makefile  Readme.md
app/: Cargo.toml  build.rs
app/src/: main.rs
enclave/: Cargo.toml  Enclave.edl  Makefile  Xargo.toml
enclave/src/: cert.rs  contract.rs  hex.rs  lib.rs  types.rs
enclave/src/contracts/: assets.rs  balance.rs  data_plaza.rs  mod.rs
enclave/src/cryptography/: mod.rs
enclave/src/light_validation/: justification.rs  mod.rs  storage_proof.rs  wasm_hacks.rs
memchr-nostd/: Cargo.toml
memchr-nostd/src/: lib.rs
protos/: animal.proto  input.proto
rust-memchr/: remove_std.patch
rust-memchr/src/: lib.rs
rust-memchr/src/x86/: mod.rs
scripts/: console.sh  query.csv
