[package]
name = "app"
version = "0.0.1"
authors = ["jasl"]
build = "build.rs"

[dependencies]
sgx_types = { path = "../rust-sgx-sdk/sgx_types" }
sgx_urts = { path = "../rust-sgx-sdk/sgx_urts" }
mio = "0.6"
dirs = "1.0.2"
lazy_static = "1.1.0"

serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"

actix = "0.7"
actix-web = "0.7"
