[package]
name = "EnclaveApp"
version = "0.0.1"
authors = ["jasl"]

[lib]
name = "enclaveapp"
crate-type = ["staticlib"]

[features]
default = []

[target.'cfg(not(target_env = "sgx"))'.dependencies]
sgx_types   = { rev = "v1.0.9", git = "https://github.com/baidu/rust-sgx-sdk.git" }
sgx_tstd    = { rev = "v1.0.9", git = "https://github.com/baidu/rust-sgx-sdk.git", features = ["net", "backtrace"] }
sgx_tcrypto = { rev = "v1.0.9", git = "https://github.com/baidu/rust-sgx-sdk.git" }
sgx_tse     = { rev = "v1.0.9", git = "https://github.com/baidu/rust-sgx-sdk.git" }
sgx_trts    = { rev = "v1.0.9", git = "https://github.com/baidu/rust-sgx-sdk.git" }
sgx_rand    = { rev = "v1.0.9", git = "https://github.com/baidu/rust-sgx-sdk.git" }

[dependencies]
chrono      = { git = "https://github.com/mesalock-linux/chrono-sgx" }
webpki      = { git = "https://github.com/mesalock-linux/webpki", branch = "mesalock_sgx" }
base64      = { git = "https://github.com/mesalock-linux/rust-base64-sgx" }
yasna       = { git = "https://github.com/mesalock-linux/yasna.rs-sgx", features = ["bit-vec", "num-bigint", "chrono"] }
num-bigint  = { git = "https://github.com/mesalock-linux/num-bigint-sgx" }
bit-vec     = { version = "*", default-features = false}
httparse    = { version = "1.3.2", default-features = false }
itertools   = { version = "0.8" , default-features = false, features = []}
ring        = { git = "https://github.com/mesalock-linux/ring-sgx", tag = "v0.16.5" }
rustls      = { git = "https://github.com/mesalock-linux/rustls", branch = "mesalock_sgx" }
webpki-roots= { git = "https://github.com/mesalock-linux/webpki-roots", branch = "mesalock_sgx" }
serde       = { git = "https://github.com/mesalock-linux/serde-sgx" }
# serde_json  = { git = "https://github.com/mesalock-linux/serde-json-sgx.git" }
serde_json = { path = "/home/jasl/Workspaces/serde-json-sgx"}
lazy_static = { version = "*", default-features = false, features = ["spin_no_std"] }
libsecp256k1= { git = "https://github.com/mesalock-linux/libsecp256k1-rs-sgx" }

[patch.'https://github.com/baidu/rust-sgx-sdk.git']
sgx_alloc = { path = "../rust-sgx-sdk/sgx_alloc" }
sgx_backtrace = { path = "../rust-sgx-sdk/sgx_backtrace" }
sgx_backtrace_sys = { path = "../rust-sgx-sdk/sgx_backtrace_sys" }
sgx_build_helper = { path = "../rust-sgx-sdk/sgx_build_helper" }
sgx_cov = { path = "../rust-sgx-sdk/sgx_cov" }
sgx_crypto_helper = { path = "../rust-sgx-sdk/sgx_crypto_helper" }
sgx_demangle = { path = "../rust-sgx-sdk/sgx_demangle" }
sgx_libc = { path = "../rust-sgx-sdk/sgx_libc" }
sgx_rand = { path = "../rust-sgx-sdk/sgx_rand" }
sgx_rand_derive = { path = "../rust-sgx-sdk/sgx_rand_derive" }
sgx_serialize = { path = "../rust-sgx-sdk/sgx_serialize" }
sgx_serialize_derive = { path = "../rust-sgx-sdk/sgx_serialize_derive" }
sgx_serialize_derive_internals = { path = "../rust-sgx-sdk/sgx_serialize_derive_internals" }
sgx_tcrypto = { path = "../rust-sgx-sdk/sgx_tcrypto" }
sgx_tcrypto_helper = { path = "../rust-sgx-sdk/sgx_tcrypto_helper" }
sgx_tdh = { path = "../rust-sgx-sdk/sgx_tdh" }
sgx_tkey_exchange = { path = "../rust-sgx-sdk/sgx_tkey_exchange" }
sgx_tprotected_fs = { path = "../rust-sgx-sdk/sgx_tprotected_fs" }
sgx_trts = { path = "../rust-sgx-sdk/sgx_trts" }
sgx_tse = { path = "../rust-sgx-sdk/sgx_tse" }
sgx_tseal = { path = "../rust-sgx-sdk/sgx_tseal" }
sgx_tservice = { path = "../rust-sgx-sdk/sgx_tservice" }
sgx_tstd = { path = "../rust-sgx-sdk/sgx_tstd" }
sgx_tunittest = { path = "../rust-sgx-sdk/sgx_tunittest" }
sgx_types = { path = "../rust-sgx-sdk/sgx_types" }
#sgx_ucrypto = { path = "../rust-sgx-sdk/sgx_ucrypto" }
sgx_unwind = { path = "../rust-sgx-sdk/sgx_unwind" }
#sgx_urts = { path = "../rust-sgx-sdk/sgx_urts" }
